添加单元测试代码

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "stop": "egg-scripts stop",
     "dev": "egg-bin dev --sticky --workers 2",
     "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test",
+    "check": "npm run lint -- --fix && npm run test",
+    "test": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
