--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "ctrl": "plop ctrl",
+    "rest": "plop ctrl",
     "autod": "autod"
   },
   "ci": {
