--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "start": "egg-scripts start --daemon --ignore-stderr --sticky",
     "st": "egg-scripts start --env=st --daemon --ignore-stderr --sticky",
     "stop": "egg-scripts stop",
-    "dev": "egg-bin dev --sticky --workers 2",
+    "dev": "egg-bin dev",
+    "dev2": "egg-bin dev --sticky --workers 2",
     "debug": "egg-bin debug",
     "check": "npm run lint -- --fix && npm run test",
     "test": "egg-bin test",
