--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
+    "new": "plop --plopfile plop-templates/plopfile.js",
     "ci": "npm run lint && npm run cov",
     "rest": "plop ctrl",
     "autod": "autod"
