--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "image-downloader": "^4.0.2",
     "mocha": "^8.4.0",
     "moment": "^2.29.1",
+    "sha1": "^1.1.1",
     "stream-to-array": "^2.3.0",
-    "stream-wormhole": "^1.1.0"
+    "stream-wormhole": "^1.1.0",
+    "wxpay-v3": "^2.2.1"
   },
   "devDependencies": {
     "autod": "^3.1.1",
